# botmanager

./: BUILD.md  CMD.md  DESIGN.md  MISC.md  PLUGIN.md  README.md  REDESIGN.md  meson.build
core/: admin.c  admin_bot.c  admin_help.c  admin_user.c  alloc.c  bconf.c  bot.c  bot_cmd.c  botmanctl.c  clam.c  clam_cmd.c  cmd.c  cmd_misc.c  cmd_set.c  cmd_show.c  colors.c  console.c  curl.c  db.c  json.c  kv.c  main.c  math_expr.c  mem.c  meson.build  method.c  plugin.c  pool.c  proc.c  resolve.c  sig.c  sock.c  sse.c  task.c  userns.c  userns_cache.c  userns_cmd.c  userns_mfa.c  userns_util.c  util.c  (+1 more)
include/: admin.h  alloc.h  bconf.h  bot.h  botmanctl.h  clam.h  clam_cmd.h  cmd.h  cmd_misc.h  colors.h  common.h  console.h  curl.h  db.h  json.h  kv.h  main.h  math_expr.h  mem.h  method.h  nl.h  plugin.h  pool.h  proc.h  resolve.h  sig.h  sock.h  sse.h  task.h  userns.h  util.h  validate.h
personalities/: README.md  dalebaumhauer.txt  hands.txt  karan.txt  lessclam.txt  pacmanpundit.txt
personalities/contracts/: conspiracy.txt  default.txt  lessclam.txt  support.txt
plugins/: meson.build
plugins/bot/chat/: chatbot.c  chatbot.h  dossier.h  extract.c  extract.h  identity.c  identity.h  memory.c  memory_cmd.c  memory_rag.c  personality_show.c  user_show.c  vision.h  volunteer.c
plugins/bot/command/: command.c  command.h  meson.build
plugins/bot/whenmoon/: README.md  account.c  account.h  aggregator.c  aggregator.h  dl_candles.c  dl_candles.h  dl_commands.c  dl_commands.h  dl_coverage.c  dl_scheduler.c  dl_scheduler.h  dl_schema.c  dl_trades.c  dl_trades.h  indicators.c  market.c  market.h  market_cmds.c  market_cmds.h  meson.build  trade_persist.c  trade_persist.h  whenmoon.c  whenmoon.h
plugins/cmd/claude/: claude.c  claude.h  meson.build
plugins/cmd/crypto/: crypto.c  crypto.h  meson.build
plugins/cmd/math/: math.c
plugins/cmd/searxng/: meson.build  searxng_cmd.c  searxng_cmd.h
plugins/cmd/smallgames/: meson.build  smallgames.c  smallgames.h
plugins/cmd/weather/: meson.build  weather.c  weather.h
plugins/contracts/: dossier_method.h
plugins/db/postgresql/: meson.build  pg.c  pg.h
plugins/exchange/coinbase/: README.md  coinbase.c  coinbase_rest.c  coinbase_sign.c  meson.build
plugins/feature/exchange/: exchange.c  exchange.h  exchange_api.h  exchange_limiter.c  exchange_registry.c  exchange_request.c  exchange_retry.c  meson.build
plugins/feature/whenmoon/: README.md  account.c  aggregator.c  aggregator.h  backtest.c  backtest.h  backtest_cmds.c  book_persist.c  book_persist.h  cd_probe.c  cd_probe.h  dl_candles.c  dl_candles.h  dl_commands.c  dl_commands.h  dl_coverage.c  dl_coverage.h  dl_jobtable.c  dl_jobtable.h  dl_schema.c  dl_schema.h  dl_supervisor.c  dl_supervisor.h  dl_trades.c  dl_trades.h  indicators.c  indicators.h  market.c  market.h  market_cmds.c  market_cmds.h  meson.build  order.c  order.h  pnl.c  pnl.h  sizer.c  sizer.h  strategy.c  strategy.h  (+9 more)
plugins/feature/whenmoon/sql/: candle_upsample.sql
plugins/feature/whenmoon/strategy/example_sma_cross/: example_sma_cross.c  meson.build
plugins/feature/whenmoon/strategy/testing/: meson.build  testing.c
plugins/inference/: acquire.c  acquire_cmd.c  acquire_digest.c  acquire_feed.c  acquire_html.c  acquire_priv.h  acquire_reactive.c  inference.c  inference.h  knowledge.c  knowledge_cmd.c  knowledge_file.c  knowledge_priv.h  llm.c  llm_cmd.c  llm_priv.h  meson.build
plugins/method/chat/: FACT_EXTRACT.md  MEMSTORE.md  chatbot.c  commands.c  contract_show.c  dossier.c  dossier.h  dossier_cmd.c  dossier_show.c  extract.c  extract_prompt.c  identity.c  identity.h  interests.c  memory.c  memory.h  meson.build  nl_bridge.c  nl_observe.c  personality.c  reply.c  show_verbs.c  speak_policy.c  vision.c
plugins/method/command/: command.c  command.h
plugins/method/irc/: irc.c  irc.h  irc_channel.c  irc_commands.c  irc_dossier.h  meson.build
plugins/misc/math/: math.c  math_plugin.h  meson.build
plugins/misc/smallgames/: smallgames.c
plugins/protocol/irc/: irc.c  irc.h  irc_commands.c  irc_dossier.c  irc_identity.c  irc_identity.h  irc_protocol.c  meson.build
plugins/service/coinbase/: README.md  coinbase.c  coinbase.h  coinbase_api.h  coinbase_exchange.c  coinbase_orders.c  coinbase_rest.c  coinbase_sign.c  coinbase_ws.c  coinbase_ws_channels.c  meson.build
plugins/service/coinmarketcap/: coinmarketcap.c  coinmarketcap.h  coinmarketcap_api.h  meson.build
plugins/service/openweather/: meson.build  openweather.c  openweather.h  openweather_api.h
plugins/service/searxng/: meson.build  searxng.c  searxng.h  searxng_api.h
scripts/: freshstart.sh  gen_version_h.sh  schema.sql  size.sh  snap.sh
tools/: botmanctl.c  botmanctl.h  ircspy.c  ircspy.h  ircspyctl.c  ircspyctl.h  meson.build  wm_dc5_cleanup.sql
