subdir('db/postgresql')
subdir('method/irc')
subdir('bot/command')
subdir('inference')
subdir('bot/chat')
subdir('bot/whenmoon')
subdir('service/openweather')
subdir('service/coinmarketcap')
subdir('service/coinbase')
subdir('service/searxng')
subdir('cmd/claude')
subdir('cmd/crypto')
subdir('cmd/math')
subdir('cmd/searxng')
subdir('cmd/smallgames')
subdir('cmd/weather')
