subdir('db/postgresql')
subdir('protocol/irc')
subdir('method/command')
subdir('inference')
subdir('method/chat')
subdir('feature/exchange')
subdir('service/coinbase')
subdir('feature/whenmoon')
subdir('feature/whenmoon/strategy/example_sma_cross')
subdir('service/openweather')
subdir('service/coinmarketcap')
subdir('service/searxng')
subdir('cmd/claude')
subdir('cmd/crypto')
subdir('cmd/math')
subdir('cmd/searxng')
subdir('cmd/smallgames')
subdir('cmd/weather')
